# DicomReader

./: CMakeLists.txt  README.md
src/: DicomReader.cpp  DicomReader.h  main.cpp
test/: test_main.cpp
